--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,3 +1,11 @@
 <% @users.each do |u| %>
-<%= u.name %>
+  <h1><a href="<%= user_path(u.id) %>"><%= u.name %></a></h1>
+  <h2>Projects</h2>
+  <% u.projects.each do |p| %>
+    <h3><%= p.name %></h3>
+    <% p.languages.each do |l| %>
+    <h5>Written in: <%= l.name %></h5>
+
+    <% end %>
+  <% end %>
 <% end %>
