--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PairProgramming</title>
+  <title>GitPaired</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<h1><%= link_to('GIT//PAIRED', root_path()) %></h1>
+========================================================
+
 <%= yield %>
-<%= notice %>
+
 
 </body>
 </html>
