--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,6 @@
-<h3>Find Github projects you might be interested in joining</h3>
+<h3>Pair up with local developers to collaborate on projects that fit your interests</h3>
 
 <br>
-<h4>Pair programming works best in person.</h4>
 <h4>Find Projects Near You!</h4>
 
 
