--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,3 +28,84 @@ h1, h2, h3 {
 img {
   padding-left: 270px;
 }*/
+
+
+
+/*ADDED FOR NAV BAR*/
+.col1 {
+  text-align: center;
+  float: left;
+  width: 16%;
+  position: relative;
+  left: 82%;
+  overflow: hidden;
+}
+
+.col2 {
+  text-align: center;
+  float: left;
+  width: 16%;
+  position: relative;
+  left: 86%;
+  overflow: hidden;
+}
+.col3 {
+  text-align: center;
+  text-align: center;
+  float: left;
+  width: 16%;
+  position: relative;
+  left: 90%;
+  overflow: hidden;
+}
+.col4 {
+  text-align: center;
+  float: left;
+  width: 16%;
+  position: relative;
+  left: 94%;
+  overflow: hidden;
+}
+.col5 {
+  text-align: center;
+  float: left;
+  width: 16%;
+  position: relative;
+  left: 98%;
+  overflow: hidden;
+}
+
+.container5 {
+  clear: left;
+  float: left;
+  width: 100%;
+  overflow: hidden;
+}
+.container4 {
+  clear: left;
+  float: left;
+  width: 100%;
+  position: relative;
+  right: 20%;
+}
+.container3 {
+  clear: left;
+  float: left;
+  width: 100%;
+  position: relative;
+  right: 20%;
+}
+.container2 {
+  clear: left;
+  float: left;
+  width: 100%;
+  position: relative;
+  right: 20%;
+}
+.container1 {
+  float: left;
+  width: 100%;
+  position: relative;
+  right: 20%;
+}
+/*END OF NAV BAR*/
