--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>GitPaired</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -25,12 +25,10 @@
   </div>
 </div>
 
-<div class="col-md-6">
-  <%= link_to 'GIT//PAIRED', root_path(),:class => 'logo' %>
+<div class="text-center">
+  <h1><%= link_to 'GIT//PAIRED', root_path(),:class => 'logo' %><h1>
 </div>
 <br>
-
-========================================================
 
 <%= yield %>
 
