--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <p><%= link_to image_tag(@user.image_path), @user.gh_url, class: 'profile-image' %></p>
 </div>
 
-Location: <%= @user.location %> <br>
+Location: <%= @neighborhood %> <br>
 Email: <%= @user.email %>
 <br>
 
