--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,11 @@
     <p><%= link_to image_tag(@user.image_path), @user.gh_url, class: 'profile-image' %></p>
 </div>
 
-Location: <%= @neighborhood %> <br>
-Email: <%= @user.email %>
+Location: <%= @neighborhood %> 
+<% if @user.email.size > 0 %>  
+  <br>
+  Email: <%= @user.email %>
+<% end %>
 <br>
 
 <div class="user-projects">
