--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 Location: <%= @neighborhood %> 
-<% if @user.email.size > 0 %>  
+<% if @user.email %>  
   <br>
   Email: <%= @user.email %>
 <% end %>
