add map to homepage, get asset pipeline to load fonts properly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,23 @@
 </div>
 <br>
 
+
 <%= yield %>
+
+<!-- =========== FOOTER ===========  -->
+<footer id="main-footer" class="add-padding bg-color3 border-top-color2">
+  <div class="container"
+    <ul class="social-links text-center">
+      <li><a href="#link"><i class="fa fa-facebook fa-fw"></i></a></li>
+      <li><a href="#link"><i class="fa fa-google-plus fa-fw"></i></a></li>
+      <li><a href="#link"><i class="fa fa-linkedin fa-fw"></i></a></li>
+    </ul>
+    <br>
+    <p class="text-center">&copy; 2014. GitPaired </p>
+    <p class="text-center"><a href="https://wrapbootstrap.com/user/qthemes" target="_blank">ALL YOUR RIGHTS ARE BELONG TO US</a></p>
+    <br>
+  </div>
+</footer>
 
 
 </body>
