--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<div id="page-loader" style: "display: none">
+<div class="page-loader-gif"></div>
+</div>
+
 <h3>Pair up with local developers to collaborate on projects that fit your interests</h3>
 
 <br>
@@ -10,3 +14,23 @@
   <%= submit_tag "Git Paired" %>
 <% end %>
 </wrapper>
+<br><br><br>
+
+
+<!-- ==================  MAP   ================== -->
+
+<section id="map">    
+  <div id="gmap"></div>
+</section>  
+
+
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+
+<script>
+  var mapPoint = {
+    'lat': 40.705313,
+    'lng': -74.013911,
+    'zoom' : 15,
+    'icon': 'assets/images/pin-dark.png'
+  };  
+</script>
