--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,10 +1,9 @@
 <h4><%= @users.size %> developer(s) found near zip code <%= @query %>.</h4>
 
 <% @users.each do |user| %>
-  <h1><%= link_to(user.first_name, user_path(user)) %></h1>
+  
   <%= link_to user_path(user) do %>
-
-    <%#= image_tag(user.image_path, width:'700', height:'580')%>
+    <%= image_tag(user.image_path, width:'500', height:'500')%>
   <% end %>
   <h2>Projects</h2>
   <% user.projects.each do |project| %>
