added soem logic to index

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,19 +1,21 @@
 <h4><%= @users.size %> developer(s) found near zip code <%= @query %>.</h4>
 
 <% @users.each do |user| %>
-  <h1><%= link_to(user.first_name, user_path(user)) %></h1>
+
+  <h3><%= link_to(user.first_name, user_path(user)) %></h3>
   <%= link_to user_path(user) do %>
 
-    <%#= image_tag(user.image_path, width:'700', height:'580')%>
+    <%= image_tag(user.image_path, width:'100', height:'auto')%>
+    <%= user.get_neighborhood %>
   <% end %>
-  <h2>Projects</h2>
+  <h3>Projects</h3>
   <% user.projects.each do |project| %>
+    <% if project.recent? %>
+    <p><%= project.name %></p>
 
-    <h3><%= project.name %></h3>
-    <p>Last commit: x days ago.</p>
     <% project.languages.each do |language| %>
-    <h5>Written in: <%= language.name %></h5>
-
+    <p>Written in: <%= language.name %><p>
+      <%end%>
     <% end %>
   <% end %>
 <% end %>
