working on collab_wanted button

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,16 +17,14 @@ Location: <%= @neighborhood %>
   <% @user.sort_projects_by_push.reverse.each do |project| %>
     <% if project.recent? %>
       <li> <%= link_to project.name, project.archive_url %> :
-        <%= form_tag("/users/#{current_user.id}/projects/#{project.id}", method: "patch") do %>
-            <%= label_tag :collaborator_wanted do %>Collaborators wanted?
-              <%= check_box_tag :collaborator_wanted %>
-              <%= submit_tag 'Submit' %>
-            <% end %>
+        <%= form_tag("/users/#{current_user.id}/projects/#{project.id}", method: "patch", remote: true) do %>
+            <%= hidden_field :collaborator_wanted, :value => "0" %>
+            <%= submit_tag 'Want help?' %>
         <% end %>
         <% if project.collaborator_wanted %>
-        This Project Needs Collaborators! Get in touch with <%= @user.first_name %> at the email above for more info.
+        <div class="collabs_wanted"> This Project Needs Collaborators! Get in touch with <%= @user.first_name %> at the email above for more info.</div>
         <% else %>
-        Project Closed
+        <div class="collabs_not_wanted">Project Closed</div>
         <% end %>
       </li>
     <% end %>  
