workin on collab button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,10 @@
  *= require_self
  */
 
-
+.user-color{
+  color: blue;
+  
+}
 
 /* ------------------------------ fonts -------------------------- */
 @font-face {
