--- a/app/views/projects/update.js.erb
+++ b/app/views/projects/update.js.erb
@@ -1,3 +1,10 @@
-$('div.collabs_wanted')
+// $('.collabs_wanted')
 
-alert('yo')
+// alert('yo')
+// $(function(){
+//   $('ol').on("click", 'i' function(){
+      
+//       $('this').toggleClass('.user-color');
+      
+//     })  
+// }  
