--- a/app/assets/stylesheets/styles-8.css
+++ b/app/assets/stylesheets/styles-8.css
@@ -217,8 +217,8 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 }
 
 #main-nav{
-    background:transparent;
-    color:#fff;
+    background: #EEEEEE;
+    
     box-shadow:0 0 0px transparent;
     -webkit-transition:background 0.3s ease-out;
     transition:background 0.3s ease-out;
@@ -239,7 +239,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 }
 
 #main-nav .container{
-    padding:30px 20px;
+    padding:10px 20px;
     -webkit-transition:padding 0.5s ease-out;
     transition:padding 0.5s ease-out;
 }
@@ -248,16 +248,20 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     padding:10px 20px;
 }
 
-#main-nav .nav a,
+#main-nav .nav a {
+    color: #334959;
+    font-weight:400;
+    font-size:18px;
+    padding:0px 10px;
+    line-height:70px;
+    background:transparent;
+}
+
 #main-nav .nav a:active,
 #main-nav .nav a:hover{
-    padding:0px 10px;
-    font-size:18px;
-    line-height:54px;
-    font-weight:400;
-    background:transparent;
-    color:#fff;
     transition: color .2s ease-in;
+    color: #52CCBA;
+    
 }
 
 #main-nav.scrolled .nav a,
@@ -931,6 +935,8 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 
 #contact-form .form-group{
     position:relative;
+    text-align:center;
+    width: 100%;
 }
 
 #contact-form .form-group [class*=fa] {
