--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,27 +8,36 @@
 </head>
 <body>
 
-<div class='container-fluid'>
-  <div class='menu-wrapper'>
-    <ul class="nav-list text-center effect">
-      <li><%= link_to "ABOUT", about_path()%></li>
-      <li><%= link_to "CONTACT", contact_path()%></li>
-    <% if logged_in? %>
-      <li><%= link_to "YOUR PROFILE", user_path(current_user) %></li>
-      <li><%= link_to "LOGGED IN AS #{current_user.first_name}", "#" %></li>
-      <li><%= link_to 'LOG OUT', logout_path %></li>
-    <% else %>
-      <li><%= link_to "SIGN UP", "/auth/github" %></li>
-      <li><%= link_to "LOG IN", "/auth/github" %></li>
-    <% end %>
-    </ul>
-  </div>
-</div>
+<div id="main-nav" class="navbar navbar-fixed-top">
+  <div class="container">
+  
+    <div class="navbar-header">
+      
+      <!-- ======= LOGO ========-->
+      <h1><%= link_to 'GIT//PAIRED', root_path(),:class => 'logo' %><h1>
+    
+    </div>
+    
+    <div id="site-nav" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "ABOUT", about_path()%></li>
+        <li><%= link_to "CONTACT", contact_path()%></li>
+        <% if logged_in? %>
+          <li><%= link_to "YOUR PROFILE", user_path(current_user) %></li>
+          <li><%= link_to "LOGGED IN AS #{current_user.first_name.upcase}", "#" %></li>
+          <li><%= link_to 'LOG OUT', logout_path %></li>
+        <% else %>
+          <li><%= link_to "SIGN UP", "/auth/github" %></li>
+          <li><%= link_to "LOG IN", "/auth/github" %></li>
+        <% end %>
+      </ul>
+    </div><!--End navbar-collapse -->
+    
+  </div><!--End container -->
+  
+</div><!--End main-nav -->
 
-<div class="text-center">
-  <h1><%= link_to 'GIT//PAIRED', root_path(),:class => 'logo' %><h1>
-</div>
-<br>
+
 
 
 <%= yield %>
