style user show

--- a/app/views/projects/update.js.erb
+++ b/app/views/projects/update.js.erb
@@ -1,6 +1,6 @@
 
 
-  $('ol').on('click', 'li', function(){
+  $('ul').on('click', 'h3', function(){
     $(this).find('.fa').toggleClass('blue');
   })
 
