--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,31 +10,30 @@
       <h3>Find & Collaborate with Local Devs</h3>      
       <h1 class='big-text' >Find Projects Near You!</h1>
     </div>
-      <% if !current_user %>
-        
-        <%= form_tag searches_path, :method => 'get' do %>
-          <%= notice %>
-          <%= text_field_tag :query, params[:query], :placeholder => "Enter a Zip Code" , :style=>'color:black' %>
-          <%= submit_tag "Git Paired" %>
+      
 
-        <% end %>
-
-      <% elsif current_user && !current_user.zipcode %>
+      <% if current_user && !current_user.zipcode %>
         <br>
         <h4 class='homepage' style='text-center'>Set Your Home Zipcode to Get Started</h4>
         <br>
-        <form id="contact-form" class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in" > 
          
-        <div style='vertical-align'> 
+        <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"  > 
           <%= form_tag("/users/#{current_user.id}", method: "patch" ) do %>        
-            <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Enter a Zip Code", :class=>'form-group search-bar' %>
-
-            <%= submit_tag "Git Paired!", :class => "btn btn-color2 btn-block" %>
+            <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Your Zip Code", :class=>'form-group search-bar' %>
+            <%= submit_tag "Submit", :class => "btn btn-color2 btn-block" %>
           <% end %>
         </div>
 
-        </form>
+      <% else %>
+        <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"  > 
+          <%= form_tag searches_path, :method => 'get' do %>
+            <br>
+            <p><%= notice %></p>          
+            <%= text_field_tag :query, params[:query], :placeholder => "Enter a Zip Code", :class=>'form-group search-bar' %>
+            <%= submit_tag "Git Paired!", :class => "btn btn-color2 btn-block" %>
+          <% end %>
 
+        </div>
       <% end %>
 
       <!-- THIS DOESNT SHOW WHEN I MOVE IT TO ELSE STATEMENT -->
@@ -57,8 +56,6 @@
 <section id="map">    
   <div id="gmap"></div>
 </section>  
-
-
 
 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
