--- a/app/views/projects/update.js.erb
+++ b/app/views/projects/update.js.erb
@@ -1,6 +1,3 @@
+$('h3[data-id=<%= @project.id %>]').find('.fa').toggleClass('selected');
 
-
-  $('ul').on('click', 'h3', function(){
-    $(this).find('.fa').toggleClass('blue');
-  })
 
