--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<section id="about" class="add-padding bg-color2">
+<section id="about" class="add-padding bg-color3">
   <div class="container">
     <div class="row">
       <!-- <div class="col-sm-6 scrollimation fade-right d1"> -->
@@ -6,7 +6,7 @@
       <!-- </div>   -->
         <!-- <p><%#= link_to image_tag(@user.image_path), @user.gh_url, class: 'img-responsive polaroid' %></p> -->
       <!-- <div class="col-sm-6 scrollimation fade-left d3"> -->
-        <h1 class='big-text'> <%= @full_name %></h1>
+        <h1 class='big-text' data-latitude='<%= @user.latitude %>' data-longitude='<%= @user.longitude %>'><%= @full_name %></h1>
 
         <h2>Located in <%= @neighborhood %></h2> 
         <% if @user.email.size > 0 %>  
@@ -23,9 +23,9 @@
                   <%= form_for project, url: user_project_path(@user.id, project.id), remote: true do |f| %>
                     <%= f.hidden_field :collaborator_wanted, :value => 'toggle' %>
                     <% if project.collaborator_wanted %> 
-                    <h3> <%= f.button '<i class="fa fa-user blue"></i>'.html_safe %> </h3>       
+                    <h3 data-id='<%= project.id %>'> <%= f.button '<i class="fa fa-user selected"></i>'.html_safe %> </h3>       
                     <% else %>
-                    <h3> <%= f.button '<i class="fa fa-user"></i>'.html_safe %> </h3>
+                    <h3 data-id='<%= project.id %>'> <%= f.button '<i class="fa fa-user"></i>'.html_safe %> </h3>
                     <% end %>
                   <% end %>
             <% end %>  
@@ -50,3 +50,27 @@
       </div>
     
     </section>
+
+<div id="page-loader" style: "display: none">
+  <div class="page-loader-gif"></div>
+</div>
+
+<section id="map">    
+  <div id="gmap"></div>
+</section>  
+
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+
+
+
+<script>
+  var lat = $("h1.big-text").data('latitude')
+  var lng = $("h1.big-text").data('longitude')
+  var mapPoint = {
+    'lat': lat,
+    'lng': lng,
+    'zoom' : 15,
+    'icon': 'assets/images/pin-dark.png'
+  };  
+</script>
+
