--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -30,6 +30,44 @@
   <% end %>
 <% end %>
 
+<!--==== Portfolio Filters ====-->
+<div id="filter-works">
+  <ul>
+    <li class="active scrollimation fade-right d1">
+        <a href="#" data-filter="*">All</a>
+    </li>
+    <li class="scrollimation fade-right">
+        <a href="#" data-filter=".identity">Identity</a>
+    </li>
+    <li class="scrollimation fade-left">
+        <a href="#" data-filter=".logo">Logo</a>
+    </li>
+    <li class="scrollimation fade-left d1">
+        <a href="#" data-filter=".illustration">Illustration</a>
+    </li>
+  </ul>
+</div><!--End portfolio filters -->
+
+<!-- ==============================================
+SINGLE PROJECT ITEM
+=============================================== -->    
+<article class="project-item web-design">
+    
+    <img class="img-responsive project-image" src="assets/placeholder-320x210.jpg" alt=""><!--Project thumb -->
+    
+    <div class="hover-mask">
+        <h2 class="project-title">Project Title</h2><!--Project Title -->
+        <p>Subtitle</p><!--Project Subtitle -->
+    </div>
+    
+    ...
+    
+</article>
+<!-- ==============================================
+END PROJECT ITEM
+=============================================== -->
+
+
 
 <!-- TO DOs -->
 <!-- Get image to flip over to show project details -->
