--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
     'lat': lat,
     'lng': lng,
     'zoom' : 15,
-    'icon': 'assets/images/pin-dark.png'
+    'icon': '/assets/pin-dark.png'
   };  
 </script>
 
