--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,18 +8,22 @@
   <wrapper class='text-center'>
     <div class='homepage'>
       <h3>Find & Collaborate with Local Devs</h3>      
-      <h1 class='big-text' >Find Projects Near You!</h1>
+      <% if current_user %>
+        <h1 class='big-text' data-latitude='<%= current_user.latitude %>' data-longitude='<%= current_user.longitude %>'>Find Projects Near You!</h1>
+      <% else %>
+        <h1 class='big-text'>Find Projects Near You!</h1>
+      <% end %>
     </div>
       
 
       <% if current_user && !current_user.zipcode %>
         <br>
-        <h4 class='homepage' style='text-center'>Set Your Home Zipcode to Get Started</h4>
+        <h3 class='homepage'>Input Your Home Zipcode</h3>
         <br>
          
         <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"  > 
           <%= form_tag("/users/#{current_user.id}", method: "patch" ) do %>        
-            <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Your Zip Code", :class=>'form-group search-bar' %>
+            <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Zip Code", :class=>'form-group search-bar' %>
             <%= submit_tag "Submit", :class => "btn btn-color2 btn-block" %>
           <% end %>
         </div>
@@ -30,11 +34,12 @@
             <br>
             <p><%= notice %></p>          
             <%= text_field_tag :query, params[:query], :placeholder => "Enter a Zip Code", :class=>'form-group search-bar' %>
-            <%= submit_tag "Git Paired!", :class => "btn btn-color2 btn-block" %>
+            <%= submit_tag "Git Paired!", :class => "btn btn-color2 btn-block", :style=>'padding-bottom:2px' %>
           <% end %>
 
         </div>
       <% end %>
+      <br>
 
       <!-- THIS DOESNT SHOW WHEN I MOVE IT TO ELSE STATEMENT -->
       
@@ -59,11 +64,28 @@
 
 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
-<script>
-  var mapPoint = {
-    'lat': 40.705313,
-    'lng': -74.013911,
-    'zoom' : 15,
-    'icon': 'assets/images/pin-dark.png'
-  };  
-</script>
+<% if current_user %>
+  <script>
+    var lat = $("h1.big-text").data('latitude')
+    var lng = $("h1.big-text").data('longitude')
+    var mapPoint = {
+      'lat': lat,
+      'lng': lng,
+      'zoom' : 15,
+      'icon': '/assets/pin-dark.png'
+    };  
+  </script>
+<% else %>
+  <script>
+    var mapPoint = {
+      'lat': 40.705313,
+      'lng': -74.013911,
+      'zoom' : 14,
+      'infoText':'<h5>Flatiron School Presents..</h5>',
+      'linkText':'Come check us out!',
+            'mapAddress':'11 Broadway, New York, NY 10004',
+      'icon': '/assets/pin-dark.png'
+    };  
+  </script>
+<% end %>
+
