--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,8 +18,10 @@
         <br>
         <ul>
         <% if current_user && current_user.id == @user.id %>
-        <h2>Your projects</h2> 
+        <h2>Your Projects</h2> 
+        <!-- <p class="proj-hover">Open this project for collaboration</p> -->
           <% @user.sort_projects_by_push.reverse.each do |project| %>
+        <div class='proj-hover'>  
             <% if project.recent? %>
               <h3> <%= link_to project.name, project.archive_url %></h3>
                   <%= form_for project, url: user_project_path(@user.id, project.id), remote: true do |f| %>
@@ -31,6 +33,7 @@
                     <% end %>
                   <% end %>
             <% end %>  
+        </div>  
           <% end %>
 
         <% else %>
