--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,16 +16,17 @@
     </div>
       
 
-      <% if current_user && !current_user.zipcode && current_user.email.length < 1 %>
+      <% if current_user && !current_user.zipcode && current_user.email.size == 0 %>
         <br>
         <h3 class='homepage'>Input Your Home Zipcode & Email So Other Coders Know How to Get in Touch.</h3>
         <br>
          
         <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"  > 
-          <%= form_tag("/users/#{current_user.id}", method: "patch" ) do %>        
-            <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Zip Code", :class=>'form-group search-bar form-control' %>  
-            <%= email_field_tag :email, params[:email], placeholder: "awesomeperson@email.com", :class=>'form-group form-control' %>
-            <%= submit_tag "Submit", :class => "btn btn-color2 btn-block" %>
+          <%#= form_tag("/users/#{current_user.id}", method: "patch" ) do %>        
+          <%= form_for @user, url: "/users/#{current_user.id}", method: "patch" do |f|%> 
+            <%= f.text_field :zipcode, placeholder: "Zip Code", :class => 'form-group search-bar form-control' %>   
+            <%= f.email_field :email, placeholder: "awesomeperson@email.com", :class => 'form-group search-bar form-control' %>
+            <%= f.submit "Submit", :class => "btn btn-color2 btn-block" %>
           <% end %>
         </div>
 
@@ -35,9 +36,9 @@
         <br>
          
         <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"  > 
-          <%= form_tag("/users/#{current_user.id}", method: "patch" ) do %>        
-            <%= text_field_tag :zipcode, params[:zipcode], placeholder: "Zip Code", :class=>'form-group search-bar form-control' %>  
-            <%= submit_tag "Submit", :class => "btn btn-color2 btn-block" %>
+          <%= form_for @user, url: "/users/#{current_user.id}", method: "patch" do |f|%>         
+            <%= f.text_field :zipcode, placeholder: "Zip Code", :class => 'form-group search-bar form-control' %>  
+            <%= f.submit "Submit", :class => "btn btn-color2 btn-block" %>
           <% end %>
         </div>
 
@@ -46,10 +47,10 @@
         <h3 class='homepage'>Input Your Email So Other Coders Know How to Get in Touch.</h3>
         <br>
          
-        <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"  > 
-          <%= form_tag("/users/#{current_user.id}", method: "patch" ) do %>        
-            <%= email_field_tag :email, params[:email], placeholder: "awesomeperson@email.com", :class=>'form-group form-control' %>
-            <%= submit_tag "Submit", :class => "btn btn-color2 btn-block" %>
+        <div style='vertical-align'  class="text-center col-sm-2 centered center-form scrollimation fade-left d3 in"> 
+          <%= form_for @user, url: "/users/#{current_user.id}", method: "patch" do |f|%>        
+            <%= f.email_field :email, placeholder: "awesomeperson@email.com", :class=>'form-group form-control' %>
+            <%= f.submit "Submit", :class => "btn btn-color2 btn-block" %>
           <% end %>
         </div>
 
